Inline tooltip fixes

--- a/vue/ui/Tooltip/InlineTooltip.scss
+++ b/vue/ui/Tooltip/InlineTooltip.scss
@@ -28,7 +28,7 @@
 
 	color: white;
 	font-style: normal;
-	font-size: $font-size-xxs;
+	font-size: $font-size-xs;
 
 	transition: opacity .3s ease-in-out;
 	opacity: 0;
